// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AbsencePeriods /> should add a period 1`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
}

.c7:focus,
.c7:hover,
.c7:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  height: 1.4rem;
  margin-left: 0.4rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c6:hover .c9 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c5 {
  width: 7em;
  padding: 1rem 0.4rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #bbcadf;
  border-color: #bbcadf;
  border-radius: 0.6rem;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c10 {
  margin: 2rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c2 {
  -webkit-flex-basis: 25rem;
  -ms-flex-preferred-size: 25rem;
  flex-basis: 25rem;
  margin-right: 2rem;
}

.c4 {
  margin-right: 2rem;
}

.c3 {
  font-weight: 700;
}

.c8 {
  margin-left: 2rem;
  font-size: 1.4rem;
}

<div>
  <p>
    Les congés maternité, arrêts de travail liés à un accident du travail ou une maladie professionnelle, congés individuels de formation (Cif) et stage de fin d’étude de plus de 2 mois ne sont pas considérés comme des absences. Merci de ne pas les renseigner.
  </p>
  <p
    class="c0"
  >
    Quels sont le motif et la durée de ces absences prolongées ?
  </p>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Motif
    </div>
    <div
      class="c4 c3"
    >
      Durée (en mois)
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        name="absences[0].type"
      >
        <option>
          Absence pour maladie non professionnelle
        </option>
        <option>
          Grève
        </option>
        <option>
          Mise à pied
        </option>
        <option>
          Congé sabbatique
        </option>
        <option>
          Congé pour création d'entreprise
        </option>
        <option>
          Congé de solidarité familiale
        </option>
        <option>
          Congé de solidarité internationale
        </option>
        <option>
          Congé parental d'éducation
        </option>
        <option>
          Congé de proche aidant
        </option>
        <option>
          Congés sans solde
        </option>
        <option>
          Arrêt maladie lié à un accident de trajet
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c5"
        name="absences[0].duration"
        size="7"
        type="number"
        value=""
      />
      <button
        class="c6 c7 c8"
        type="button"
      >
        Supprimer
        <svg
          class="c9"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
          <polyline
            points="12 5 19 12 12 19"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="c6 c7 c10"
    type="button"
  >
    Ajouter une période
    <svg
      class="c9"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </button>
</div>
`;

exports[`<AbsencePeriods /> should delete a period 1`] = `
.c6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
}

.c6:focus,
.c6:hover,
.c6:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c8 {
  height: 1.4rem;
  margin-left: 0.4rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c5:hover .c8 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c7 {
  margin: 2rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c2 {
  -webkit-flex-basis: 25rem;
  -ms-flex-preferred-size: 25rem;
  flex-basis: 25rem;
  margin-right: 2rem;
}

.c4 {
  margin-right: 2rem;
}

.c3 {
  font-weight: 700;
}

<div>
  <p>
    Les congés maternité, arrêts de travail liés à un accident du travail ou une maladie professionnelle, congés individuels de formation (Cif) et stage de fin d’étude de plus de 2 mois ne sont pas considérés comme des absences. Merci de ne pas les renseigner.
  </p>
  <p
    class="c0"
  >
    Quels sont le motif et la durée de ces absences prolongées ?
  </p>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Motif
    </div>
    <div
      class="c4 c3"
    >
      Durée (en mois)
    </div>
  </div>
  <button
    class="c5 c6 c7"
    type="button"
  >
    Ajouter une période
    <svg
      class="c8"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </button>
</div>
`;

exports[`<AbsencePeriods /> should render 1`] = `
.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #ff7067;
  font-weight: 400;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
}

.c7:focus,
.c7:hover,
.c7:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9 {
  height: 1.4rem;
  margin-left: 0.4rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c6:hover .c9 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c5 {
  width: 7em;
  padding: 1rem 0.4rem;
  font-size: 1rem;
  line-height: inherit;
  text-align: right;
  border: 1px solid #bbcadf;
  border-color: #bbcadf;
  border-radius: 0.6rem;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c10 {
  margin: 2rem 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 0.4rem;
}

.c2 {
  -webkit-flex-basis: 25rem;
  -ms-flex-preferred-size: 25rem;
  flex-basis: 25rem;
  margin-right: 2rem;
}

.c4 {
  margin-right: 2rem;
}

.c3 {
  font-weight: 700;
}

.c8 {
  margin-left: 2rem;
  font-size: 1.4rem;
}

<div>
  <p>
    Les congés maternité, arrêts de travail liés à un accident du travail ou une maladie professionnelle, congés individuels de formation (Cif) et stage de fin d’étude de plus de 2 mois ne sont pas considérés comme des absences. Merci de ne pas les renseigner.
  </p>
  <p
    class="c0"
  >
    Quels sont le motif et la durée de ces absences prolongées ?
  </p>
  <div
    class="c1"
  >
    <div
      class="c2 c3"
    >
      Motif
    </div>
    <div
      class="c4 c3"
    >
      Durée (en mois)
    </div>
  </div>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <select
        name="absences[0].type"
      >
        <option>
          Absence pour maladie non professionnelle
        </option>
        <option>
          Grève
        </option>
        <option>
          Mise à pied
        </option>
        <option>
          Congé sabbatique
        </option>
        <option>
          Congé pour création d'entreprise
        </option>
        <option>
          Congé de solidarité familiale
        </option>
        <option>
          Congé de solidarité internationale
        </option>
        <option>
          Congé parental d'éducation
        </option>
        <option>
          Congé de proche aidant
        </option>
        <option>
          Congés sans solde
        </option>
        <option>
          Arrêt maladie lié à un accident de trajet
        </option>
      </select>
    </div>
    <div
      class="c4"
    >
      <input
        class="c5"
        name="absences[0].duration"
        size="7"
        type="number"
        value="3"
      />
      <button
        class="c6 c7 c8"
        type="button"
      >
        Supprimer
        <svg
          class="c9"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="5"
            x2="19"
            y1="12"
            y2="12"
          />
          <polyline
            points="12 5 19 12 12 19"
          />
        </svg>
      </button>
    </div>
  </div>
  <button
    class="c6 c7 c10"
    type="button"
  >
    Ajouter une période
    <svg
      class="c9"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="5"
        x2="19"
        y1="12"
        y2="12"
      />
      <polyline
        points="12 5 19 12 12 19"
      />
    </svg>
  </button>
</div>
`;
